2006-09-20  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpperspectiveclone.c: removed unused variables and
	unused macro.

2006-09-20  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpsourcecore.c: implement GimpPaintCore::start()
	and set paint_core->use_saved_proj to TRUE when we are using
	the destination drawable image's projection as source. Return
	FALSE from start() if there is no src_drawable set and removed
	checks for src_drawable != NULL further down in the code path.

	* app/tools/gimpperspectiveclonetool.c (button_press)
	* app/tools/gimpsourcetool.c (button_press): don't fiddle with
	paint_core->use_saved_proj here.

	* app/paint/gimpclone.c: implement GimpPaintCore::start() and
	return FALSE if we are in pattern mode and there is no pattern to
	clone from. Removed GimpPaintCore::paint() implementation because
	all it did was popping a message if there is no pattern. Removed
	check for pattern != NULL and cleaned up the file a bit.

	* app/paint/gimpperspectiveclone.c (paint): removed message about
	no pattern to clone from.

2006-09-20  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpgradient.[ch]: added gimp_gradient_flatten() which
	creates a copy of a gradient with all colors that refer to FG or
	BG turned into constant colors.

	* app/core/gimpdrawable-blend.c (gradient_fill_region): create a
	flat copy of the gradient if it contains FG/BG colors. Avoids
	gazillions of context color lookups while rendering, depending on
	gradient and blend complexity.

2006-09-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: allow to pass a (domain, path) tuple
	as value for the domain argument of the register() call. Document
	the domain argument.

2006-09-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_message): don't leak the message.

	* app/file/file-utils.c (file_utils_find_proc): clear the error
	if we found a file procedure by matching the file extension.
